# docker-sample

django-sample/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
django-sample/app/: settings.py
spring-boot3-sample/: INSTALL.md  Makefile  pom.xml
spring-boot3-sample/src/main/java/dev/caobaoqi6040/backend/: SpringBoot3DockerizeDemoApplication.java
spring-boot3-sample/src/main/resources/: application.properties
spring-boot3-sample/src/test/java/dev/caobaoqi6040/backend/: SpringBoot3DockerizeDemoApplicationTests.java
vue3-nginx-sample/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ccGXJNPYn1.txt  nginx.conf  package.json  pnpm-lock.yaml
